--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,4 +15,4 @@ log4j.appender.File.layout=org.apache.log4j.PatternLayout
 log4j.appender.File.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH\:mm|\:ss}][%c]%m%n
 
 
-log4j.logger.dao=DEBUG
+log4j.logger.mapper=DEBUG
